--- a/my-web-page/src/.github/workflows/update_announcements.yml
+++ b/my-web-page/src/.github/workflows/update_announcements.yml
@@ -1,28 +1,20 @@
-name: Update Announcements
+name: Actualizar Anuncios
 
 on:
   push:
     branches:
-      - main  # o la rama en la que quieres que se active
+      - main
 
 jobs:
-  update-announcements:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run script to update announcements
-      run: node updateAnnouncements.js
-      env:
-        DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
-
+      - name: Actualizar anuncios
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+            -d '{"content": "¡Nuevo anuncio! ¡Revisa las actualizaciones!"}' \
+            ${{ secrets.DISCORD_WEBHOOK_URL }}
